# AiOfficeSwarm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  swarm.example.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
crates/swarm-cli/: Cargo.toml
crates/swarm-cli/src/: main.rs
crates/swarm-cli/src/commands/: agent.rs  config_cmd.rs  demo.rs  learning.rs  metrics_cmd.rs  mod.rs  plugin.rs  role.rs  task.rs  update.rs
crates/swarm-config/: Cargo.toml
crates/swarm-config/src/: lib.rs  loader.rs  model.rs  secrets.rs
crates/swarm-core/: Cargo.toml
crates/swarm-core/src/: agent.rs  capability.rs  error.rs  event.rs  identity.rs  lib.rs  policy.rs  rbac.rs  task.rs  types.rs
crates/swarm-learning/: Cargo.toml
crates/swarm-learning/src/: event.rs  lib.rs  output.rs  scope.rs  store.rs  strategy.rs
crates/swarm-memory/: Cargo.toml
crates/swarm-memory/src/: access.rs  backend.rs  entry.rs  in_memory.rs  lib.rs  query.rs  retention.rs
crates/swarm-orchestrator/: Cargo.toml
crates/swarm-orchestrator/src/: lib.rs  orchestrator.rs  registry.rs  scheduler.rs  supervision.rs  task_queue.rs  task_store.rs
crates/swarm-personality/: Cargo.toml
crates/swarm-personality/src/: boundary.rs  lib.rs  profile.rs  registry.rs  traits.rs
crates/swarm-plugin/: Cargo.toml
crates/swarm-plugin/src/: host.rs  lib.rs  lifecycle.rs  manifest.rs  registry.rs  wasm_loader.rs  wasm_manifest.rs
crates/swarm-policy/: Cargo.toml
crates/swarm-policy/src/: builtin.rs  engine.rs  lib.rs  rbac_engine.rs
crates/swarm-provider/: Cargo.toml
crates/swarm-provider/src/: capabilities.rs  lib.rs  registry.rs  request.rs  response.rs  router.rs  streaming.rs  token.rs  traits.rs
crates/swarm-role/: Cargo.toml
crates/swarm-role/src/: error.rs  hierarchy.rs  learning_bridge.rs  lib.rs  loader.rs  memory_bridge.rs  model.rs  normalizer.rs  parser.rs  personality_bridge.rs  policy_binding.rs  registry.rs  resolver.rs  validator.rs
crates/swarm-runtime/: Cargo.toml
crates/swarm-runtime/src/: circuit_breaker.rs  lib.rs  retry.rs  runner.rs
crates/swarm-telemetry/: Cargo.toml
crates/swarm-telemetry/src/: audit.rs  lib.rs  metrics.rs  tracing_init.rs
docs/: architecture-v2.md  architecture.md  role-system.md
docs/adr/: ADR-001-rust-language.md  ADR-002-workspace-structure.md  ADR-003-deny-by-default-policy.md  ADR-004-trait-object-plugins.md  ADR-005-dashmap-registry.md  ADR-006-wasm-plugin-format.md
examples/basic_swarm/: Cargo.toml
examples/basic_swarm/src/: main.rs
plugins/example-integration/: Cargo.toml
plugins/example-integration/src/: lib.rs
plugins/wasm-example/: Cargo.toml  plugin.toml
plugins/wasm-example/src/: lib.rs
roles/: ORGANIGRAMM.md  README.md
roles/00_GOVERNANCE/: CEO_Agent.md  CFO_Agent.md  COO_Agent.md  Chief_of_Staff_Agent.md  Legal_Compliance_Agent.md
roles/01_PRODUCT_TECH/: CTO_Engineering_Agent.md  Data_Analytics_Agent.md  Delivery_Agent.md  Product_Agent.md  Security_Privacy_Agent.md  UX_Design_Agent.md
roles/02_GROWTH_REVENUE/: Growth_Performance_Agent.md  Marketing_Agent.md  Partnerships_BizDev_Agent.md  Sales_Agent.md
roles/03_CUSTOMER/: Customer_Success_Agent.md  Support_Agent.md
roles/04_PEOPLE/: Learning_Enablement_Agent.md  People_Culture_Agent.md  Talent_Acquisition_Agent.md
roles/05_BACKOFFICE/: Internal_IT_Agent.md  Procurement_Vendor_Agent.md
scripts/: install.ps1  install.sh  path-utils.ps1  uninstall.ps1  uninstall.sh
