[workspace]
members = [
    "crates/swarm-core",
    "crates/swarm-orchestrator",
    "crates/swarm-policy",
    "crates/swarm-plugin",
    "crates/swarm-config",
    "crates/swarm-telemetry",
    "crates/swarm-runtime",
    "crates/swarm-cli",
    "crates/swarm-provider",
    "crates/swarm-personality",
    "crates/swarm-memory",
    "crates/swarm-learning",
    "crates/swarm-role",
    "plugins/example-integration",
    "examples/basic_swarm",
]
exclude = ["plugins/wasm-example"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
authors = ["AiOfficeSwarm Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JosunLP/AiOfficeSwarm"
homepage = "https://github.com/JosunLP/AiOfficeSwarm"
description = "Enterprise-ready Rust framework for orchestrating AI agents"
keywords = ["ai", "agents", "orchestration", "swarm", "enterprise"]
categories = ["asynchronous", "concurrency"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Unique identifiers
uuid = { version = "1.7", features = ["v4", "v5", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Observability / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Async trait support
async-trait = "0.1"

# Concurrent data structures
dashmap = "5.5"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Randomness (for backoff jitter, etc.)
rand = "0.8"

# Internal crates
swarm-core = { path = "crates/swarm-core" }
swarm-orchestrator = { path = "crates/swarm-orchestrator" }
swarm-policy = { path = "crates/swarm-policy" }
swarm-plugin = { path = "crates/swarm-plugin" }
swarm-config = { path = "crates/swarm-config" }
swarm-telemetry = { path = "crates/swarm-telemetry" }
swarm-runtime = { path = "crates/swarm-runtime" }
swarm-provider = { path = "crates/swarm-provider" }
swarm-personality = { path = "crates/swarm-personality" }
swarm-memory = { path = "crates/swarm-memory" }
swarm-learning = { path = "crates/swarm-learning" }
swarm-role = { path = "crates/swarm-role" }

# Regex for role file parsing
regex = "1.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
