[package]
name = "swarm-runtime"
description = "Execution runtime: fault tolerance, retry logic, circuit breakers, and task runners"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
swarm-core = { workspace = true }
swarm-orchestrator = { workspace = true }
swarm-policy = { workspace = true }
swarm-provider = { workspace = true }
swarm-personality = { workspace = true }
swarm-memory = { workspace = true }
swarm-learning = { workspace = true }
swarm-role = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
swarm-policy = { workspace = true }
