[package]
name = "example-integration"
description = "Example plugin: demonstrates how to implement and register a swarm plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
swarm-core = { workspace = true }
swarm-plugin = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
